--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,18 @@
     @apply bg-background text-foreground;
   }
 }
+@keyframes colorChange {
+  0% {
+    color: #efd3b3;
+  }
+  50% {
+    color: #ffffff;
+  }
+  100% {
+    color: #efd3b3;
+  }
+}
+
+.color-animation {
+  animation: colorChange 2s infinite;
+}
